# specdec

./: .gitignore  LICENSE  README.md  pyproject.toml
specdec/: __init__.py  algorithms.py  config.py  dataset.py  decomposition.py  pixel.py  plotting.py  results.py
